<resources>
    <string name="app_name">Faculty App</string>
    <string name="logo_login_page_description">Logo Login Page</string>
    <string name="pass_hint">Password...</string>
    <string name="email_hint">Your Email Id...</string>
    <string name="login_to_account_btn">Login To Account</string>
    <string name="create_new_account_btn">Need A New Account?</string>
    <string name="action_search_text">Search</string>
    <string name="action_setting_text">Account Setting</string>
    <string name="action_logout_text">Logout</string>
    <string name="register_page_logo">Register Page Logo</string>
    <string name="reg_create_account_btn">Create New Account</string>
    <string name="reg_alreadyhaveaccount_btn">Already Have An Account?</string>
    <string name="reg_confirm_pwd_hint">Confirm Password...</string>
    <string name="student_setup_name_hint">Enter Your name...</string>
    <string name="student_setup_btn_text">Save Account Settings</string>
    <string name="student_setup_usn_hint">Enter USN...</string>
    <string name="student_setup_class_hint">Enter Class...</string>
    <string name="student_setup_branch_hint">Enter Branch...</string>
    <string name="student_setup_semester_hint">Enter Semester...</string>
    <string name="home">Home</string>
    <string name="notification">Notification</string>
    <string name="notes">Notes</string>
    <string name="details">Details</string>
    <string name="faculty_setup_name_hint">Enter Name...</string>
    <string name="faculty_setup_id_hint">Enter ID...</string>
    <string name="faculty_setup_branch_hint">Select Branch...</string>
    <string name="faculty_setup_btn_text">Add Details</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_semester">Select Semester</string>
    <string name="loading_usn">Loading USN...</string>
    <string name="loading_name">Loading Name...</string>
    <string name="loading_branch">Loading Branch...</string>
    <string name="loading_class">Loading Class...</string>
    <string name="loading_semester">Loading Semester...</string>
    <string name="send_message_each_student">Send Message</string>
    <string name="default_notification_channel_id">Faculty_CH_01</string>
</resources>
